fix Keep Smiling size on mobile

--- a/style.css
+++ b/style.css
@@ -331,6 +331,10 @@ body {
     text-shadow: 0 1px 2px rgba(0,0,0,0.15);
 }
 
+@media (max-width: 767px) {
+    .flipbook .page small { font-size: 9px; }
+}
+
 
 
 /* Login Screen */
